now server sends time stamps for each image taken as a byte array to the client. Client monitor keep a list of type Image for each camera where Image include both a jpeg and its time stamp