@@ -3,8 +3,8 @@ package client;
 import java.util.LinkedList;
 
 public class ClientMonitor {
-	private LinkedList<byte[]> cam1Images;
-	private LinkedList<byte[]> cam2Images;
+	private LinkedList<Image> cam1Images;
+	private LinkedList<Image> cam2Images;
 	private LinkedList<ClientOutputThread> outputThreads;
 	private int cameraMode;
 	private String viewMode;
@@ -14,14 +14,14 @@ public class ClientMonitor {
 	public static final int MOVIE = 2;
 
 	public ClientMonitor() {
-		cam1Images = new LinkedList<byte[]>();
-		cam2Images = new LinkedList<byte[]>();
+		cam1Images = new LinkedList<Image>();
+		cam2Images = new LinkedList<Image>();
 		outputThreads = new LinkedList<ClientOutputThread>();
 		cameraMode = ClientMonitor.AUTO;
 		motionDetected = false;
 	}
 
-	public synchronized void addImage(byte[] image, int orderNbr) {
+	public synchronized void addImage(Image image, int orderNbr) {
 		System.out.println(cam1Images.size() +"                    "+ cam2Images.size());
 		if (orderNbr == 1) {
 			cam1Images.add(image);
@@ -64,18 +64,28 @@ public class ClientMonitor {
 		return viewMode;
 	}
 
-	public synchronized LinkedList<byte[]> getImages() {
-		while (cam1Images.isEmpty() || cam2Images.isEmpty()) {
+	public synchronized byte[] getCam1Image(){
+		while (cam1Images.isEmpty()) {
 			try {
 				wait();
 			} catch (InterruptedException e) {
 				e.printStackTrace();
 			}
 		}
-		LinkedList<byte[]> images = new LinkedList<byte[]>();
-		images.add(cam1Images.remove(0));
-		images.add(cam2Images.remove(0));
-		return images;
+		Image img = cam1Images.removeFirst();
+		return img.getJPEG();
+	}
+	
+	public synchronized byte[] getCam2Image(){
+		while (cam2Images.isEmpty()) {
+			try {
+				wait();
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
+		}
+		Image img = cam2Images.removeFirst();
+		return img.getJPEG();
 	}
 
 	public synchronized void addOutputThread(ClientOutputThread clientOutputThread) {
